[package]
name = "warp_todo"
version = "0.1.0"
authors = ["its404 <benwk424@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.1"
serde_derive = "1.0.104"
serde = "1.0.104"